--- a/LSTM_OCSVM_SHAP.ipynb
+++ b/LSTM_OCSVM_SHAP.ipynb
@@ -2,15 +2,15 @@
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Bxrl_4IhbSSd"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
     },
     {
       "cell_type": "code",
@@ -60,12 +60,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Import Data \n"
-      ],
       "metadata": {
         "id": "YOiH3SauAUbV"
-      }
+      },
+      "source": [
+        "#Import Data \n"
+      ]
     },
     {
       "cell_type": "code",
@@ -112,12 +112,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#LSTM Model"
-      ],
       "metadata": {
         "id": "IiKbYw_uEoCF"
-      }
+      },
+      "source": [
+        "#LSTM Model"
+      ]
     },
     {
       "cell_type": "code",
@@ -168,12 +168,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Anomaly Detection using OCSVM"
-      ],
       "metadata": {
         "id": "DrCvj0UTFfI4"
-      }
+      },
+      "source": [
+        "#Anomaly Detection using OCSVM"
+      ]
     },
     {
       "cell_type": "code",
@@ -205,6 +205,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7dSXAYad5He3"
+      },
+      "outputs": [],
       "source": [
         "# for i in range(1,10):\n",
         "#   for j in range(1,10):\n",
@@ -222,29 +227,29 @@
         "#Precision :  0.8470223599734337\n",
         "#Recall:  0.9627579265223956\n",
         "#F1_score:  0.9011894947591567"
-      ],
-      "metadata": {
-        "id": "7dSXAYad5He3"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "h0DHFCMywmg7"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.metrics import PrecisionRecallDisplay\n",
         "y_score = model.decision_function(X_test1)\n",
         "display = PrecisionRecallDisplay.from_predictions(y_test, y_score, name=\"LinearSVC\")\n",
         "_ = display.ax_.set_title(\"2-class Precision-Recall curve\")"
-      ],
-      "metadata": {
-        "id": "h0DHFCMywmg7"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "BA75YOjQK9pY"
+      },
+      "outputs": [],
       "source": [
         "# for i in range(1,10):\n",
         "#   for j in range(1,9):\n",
@@ -252,15 +257,15 @@
         "#     y_predict = model.predict(X_test1)\n",
         "#     f1 = f1_score(y_test, y_predict)\n",
         "#     print ('F1_score: ', f1)"
-      ],
-      "metadata": {
-        "id": "BA75YOjQK9pY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "CtrXnUY4x5jx"
+      },
+      "outputs": [],
       "source": [
         "# predicted_train = lstm_autoencoder.predict(X_train)\n",
         "# predicted = lstm_autoencoder.predict(X_test)\n",
@@ -271,21 +276,16 @@
         "# grid.fit(mse_train[:, None])\n",
         "# h=grid.best_estimator_.bandwidth2\n",
         "# tau=FindThreshold(mse_train,h,0.56)"
-      ],
-      "metadata": {
-        "id": "CtrXnUY4x5jx"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Model Explantation "
-      ],
       "metadata": {
         "id": "emAHIF8rJdCl"
-      }
+      },
+      "source": [
+        "#Model Explantation "
+      ]
     },
     {
       "cell_type": "code",
@@ -347,7 +347,8 @@
       "outputs": [],
       "source": [
         "import shap \n",
-        "X_train2 = X_train[0:400]\n",
+        "# X_train2 = X_train[0:400]\n",
+        "X_train2 = X_train[:]\n",
         "explainer = shap.GradientExplainer(lstm_autoencoder1, X_train2)\n",
         "X_test_2 = X_test[0:16]\n",
         "shap_values  = explainer.shap_values(X_test_2)"
@@ -355,17 +356,22 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "shap.initjs()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "8ubaz96kNrzG"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "shap.initjs()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "E54CmARJN2-X"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "features = ['address','function','length','setpoint','gain','reset rate','deadband','cycle time','rate','system mode','control scheme','pump','solenoid','pressure measurement','crc rate','command reponse']\n",
@@ -374,12 +380,7 @@
         "x_test_2d = pd.DataFrame(data=X_test_2D, columns = features)\n",
         "# x_test_2d.corr()\n",
         "shap.summary_plot(shap_values_2D, x_test_2d)"
-      ],
-      "metadata": {
-        "id": "E54CmARJN2-X"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
